# tma4280_gruppe

./: .gitignore  README.md
code/: CMakeLists.txt  analysis.m  analysis_no_omp.m  ex4.c  output  output_no_omp  run.sh  timing.sh
code/_debug/: makerun.sh  run.sh
code/common/: common.c
ex4/: output
ex4/code/common/: .common.c.swp  .common.h.swp  CMakeLists.txt
ex4/report/: report.tex
ex4/report/graphics/: error.eps
ex4/report/preamble/: preamble-addon-listings.tex
ex6/code/mpi_omp/poisson/: poisson2D.c
ex6/code/only_mpi/poisson/: CMakeLists.txt  poisson2D.c
ex6/code/only_mpi_dzenan/poisson/: poisson2D.c
ex6/code/only_omp/poisson/: CMakeLists.txt  poisson2D.c
ex6/latex/: ex6.tex
ex6/latex/illustrations/: equation_numbering.tikz  mesh.tikz  parallell_program_flow.tikz  stencils.tikz
ex6/latex/output_clean/: README  const_n_16384  const_n_16384_mod  const_n_16384_mod_36p  const_n_8192_1  const_n_8192_1_mod  const_n_8192_2  const_n_8192_3  const_pt_1  const_pt_10  const_pt_2  const_pt_3  const_pt_4  const_pt_5  const_pt_6  const_pt_7  const_pt_8  const_pt_9  serial_16384_kongull  serial_8192_kongull
ex6/latex/parts/: appendix_a_kongull.tex  appendix_diagonalization_code.tex  bottlenecks.tex  hardware_compiler.tex  introduction.tex  problem_a.tex  problem_b.tex  problem_c.tex  problem_d.tex  problem_e.tex  problem_f.tex  problem_g.tex  runtime.tex  theory.tex
ex6/latex/preambles/: preamble-addon-envs.tex  preamble-addon-figures.tex  preamble.tex
report/: report.tex
report/graphics/: error.eps  runtime.eps
report/preamble/: preamble.tex
(+35 files in other folders)
